--- a/styles/Navigation.module.scss
+++ b/styles/Navigation.module.scss
@@ -18,6 +18,7 @@
 
     @include breakpoint-md {
       height: 60px;
+      margin-left: 0;
     }
   }
 
